tests/baselines/reference/computedPropertyNamesOnOverloads.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNamesOnOverloads.ts(4,5): error TS1168: Computed property names are not allowed in method overloads.
tests/cases/conformance/es6/computedProperties/computedPropertyNamesOnOverloads.ts(4,5): error TS9002: Computed property names are not currently supported.
tests/cases/conformance/es6/computedProperties/computedPropertyNamesOnOverloads.ts(5,5): error TS1168: Computed property names are not allowed in method overloads.
tests/cases/conformance/es6/computedProperties/computedPropertyNamesOnOverloads.ts(5,5): error TS9002: Computed property names are not currently supported.
tests/cases/conformance/es6/computedProperties/computedPropertyNamesOnOverloads.ts(6,5): error TS9002: Computed property names are not currently supported.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNamesOnOverloads.ts (5 errors) ====
    var methodName = "method";
    var accessorName = "accessor";
    class C {
        [methodName](v: string);
        ~~~~~~~~~~~~
!!! error TS1168: Computed property names are not allowed in method overloads.
        ~~~~~~~~~~~~
!!! error TS9002: Computed property names are not currently supported.
        [methodName]();
        ~~~~~~~~~~~~
!!! error TS1168: Computed property names are not allowed in method overloads.
        ~~~~~~~~~~~~
!!! error TS9002: Computed property names are not currently supported.
        [methodName](v?: string) { }
        ~~~~~~~~~~~~
!!! error TS9002: Computed property names are not currently supported.
    }